fixed  contrast error for homework resubmission

--- a/filtered-temples.css
+++ b/filtered-temples.css
@@ -55,13 +55,57 @@ nav {
     text-align: center;
 }
 
-nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0.75rem;
+
+
+header {
+    background-color: #4b006e;
+    color: white;
+    text-align: center;
+    padding: 1rem;
 }
 
-nav a:hover {
+h1,
+h2 {
+    text-align: center;
+}
+
+.navigation a {
+    color: #4b006e;
+    background-color: white;
+    text-decoration: none;
+    padding: 0.75rem;
+    display: block;
+    font-weight: 600;
+}
+
+.navigation a:hover {
     background-color: #4b006e;
-    color: #fff;
+    color: white;
+}
+
+.gallery section {
+    background-color: white;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 20%);
+    overflow: hidden;
+}
+
+.gallery h3 {
+    background-color: #4b006e;
+    color: white;
+    padding: 0.75rem;
+    margin: -1.5rem -1.5rem 1rem -1.5rem;
+}
+
+.gallery p strong {
+    color: #222;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 2rem;
 }
